--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"email": "luisarmando1234@gmail.com"
 	}],
 	"require": {
-		"yiisoft/yii2": "~2.0.0"
+		"yiisoft/yii2": "~2.0.0",
+		"google/cloud": "^0.35.0"
 	},
 	"autoload": {
 		"psr-4": {
